--- a/ch01/ch01.csproj
+++ b/ch01/ch01.csproj
@@ -18,6 +18,7 @@
     <Compile Remove="Program2.cs" />
     <Compile Remove="SimpleType1.cs" />
     <Compile Remove="SimpleType2.cs" />
+    <Compile Remove="Test1.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -32,6 +33,7 @@
     <None Include="Program2.cs" />
     <None Include="SimpleType1.cs" />
     <None Include="SimpleType2.cs" />
+    <None Include="Test1.cs" />
   </ItemGroup>
 
 </Project>
